# NBAModel-AutoGluon-NN

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
config/: optimal_spans.json
docs/: mkdocs.yml
docs/docs/: index.md
nba_model_using_player_embeddings/: __init__.py  database.py  dataset.py  features.py  plots.py
nba_model_using_player_embeddings/modeling/: predict.py  train.py
notebooks/: 02_player_model_with_positions.ipynb  03_player_model_with_positions_autogluon.ipynb  04_team_model_with_autogluon.ipynb  05_preprocessing_notebook.ipynb  06_model_betting_analysis.ipynb  Kalman filter Exploration.ipynb  nba_database_builder.ipynb  nba_on_court.ipynb  team_model.ipynb
src/: ETL.py  Train.py  feature_aggregator.py  optimal_spans.py  preprocess_features_for_model.py  queries.py  update_database.py
src/config/: optimal_spans.json
