[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nba_model_using_player_embeddings"
version = "0.0.1"
description = "Attempting to use player embeddings to predict the point differential of nba games and see if it can beat the spread"
authors = [
  { name = "Jordan Nishimura" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["nba_model_using_player_embeddings"]
force_sort_within_sections = true
